--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,23 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>File Upload</title>
+  <title>TkVault</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>File Upload</h1>
-  
-  <!-- Form for file upload -->
+  <div class="title">
+    TkVault
+    <div class="subtitle">
+      File Upload System
+    </div>
+    <div class="title">
+      <img src="https://media.tenor.com/7GzWtl6kvcgAAAAi/bocchi-the-rock.gif">
+    </div>
+  </div>
   <form action="/upload" method="post" enctype="multipart/form-data">
     <input type="file" name="file" required>
     <button type="submit">Upload</button>
+    <p>12 MB upload limit.</p>
   </form>
 
   <!-- List of uploaded files -->
   <h2>Uploaded Files:</h2>
-  <ul>
+  <ul id="fileList">
     <% files.forEach(file => { %>
-      <li><a href="/uploads/<%= file %>"><%= file %></a></li>
+      <li>
+        <a href="/uploads/<%= file.fileName %>"><%= file.fileName %></a>
+        <p>Uploader's IP: <%= file.uploaderIP %></p>
+        <p>Time of upload: <%= new Date(file.uploadTime).toLocaleString() %></p>
+      </li>
     <% }); %>
   </ul>
 </body>
