adds console.log on info and minor changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Anonymous File Upload System for my friends.">
+  <meta name="keywords" content="File Upload, tkvault">
+  <meta name="author" content="tk.sh">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="TkVault">
+  <meta property="og:description" content="Anonymous File Upload System for my friends.">
+  <meta property="og:image" content="https://media.tenor.com/7GzWtl6kvcgAAAAi/bocchi-the-rock.gif">
   <title>TkVault</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="icon" href="/favicon.ico">
