--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
   <meta property="og:title" content="TkVault">
   <meta property="og:description" content="Anonymous File Upload System for my friends.">
   <meta property="og:image" content="https://media.tenor.com/7GzWtl6kvcgAAAAi/bocchi-the-rock.gif">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tk-vault.onrender.com" />
   <title>TkVault</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="icon" href="/favicon.ico">
